--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -180,6 +180,7 @@ button.cancel:hover {
   position: relative;
   display: flex;
   flex-direction: column;
+  margin-bottom: 16px;
 }
 
 .material-group input,
